# zigraster

./: .gitignore  LICENSE  README.md  build.zig  build.zig.zon  pyproject.toml  requirements.txt  setup.py
data/: field_disp_y.csv  field_disp_z.csv
data/block/: case25.i  case25.msh  case25_out.e  connectivity.csv  coords.csv  field_disp_frame1.csv  field_disp_frame2.csv  field_disp_frame3.csv  field_disp_frame4.csv  field_disp_frame5.csv  field_disp_frame6.csv  field_disp_frame7.csv  field_disp_frame8.csv  field_disp_x.csv  field_disp_y.csv  field_disp_z.csv
data/cubes/: cube_HEX20.i  cube_HEX20_out.e  cube_HEX27.i  cube_HEX27_out.e  cube_HEX8.i  cube_HEX8_out.e  cube_TET10.i  cube_TET10_out.e  cube_TET4.i  cube_TET4_out.e
data/cylinder/: connectivity.csv  coords.csv  cylinder_m1.geo  cylinder_m1.i  cylinder_m1_out.e  field_disp_frame0.csv  field_disp_frame1.csv  field_disp_frame2.csv  field_disp_frame3.csv  field_disp_frame4.csv  field_disp_frame5.csv  field_disp_frame6.csv  field_disp_frame7.csv  field_disp_frame8.csv  field_disp_x.csv  field_disp_y.csv  field_disp_z.csv
scripts/: build.zig  main_arraylistalloc.zig  main_arraylistcap.zig  main_dynlib.zig  main_fileio.zig  save_sim_to_csv.py
scripts/archive/: matalloc.zig  vecalloc.zig
src/: main.zig  main_plot_images.py  main_raster.py  main_raster.zig  main_raster_all.zig  main_raster_frames.zig  main_tile_raster.zig  plot_images.py  root.zig
src/core/: camera.zig  matalloc.zig  matheap.zig  matrix.zig  matslice.zig  matstack.zig  meshio.zig  raster.zig  rotation.zig  sliceops.zig  slicetools.zig  (+4 more)
(+23 files in other folders)
